# Agent-OS

./: .env.example  .gitignore  PROGRAM.md  README.md  package-lock.json  package.json  setup.ps1  setup.sh  start.ps1  tools.json
client/: index.html  package.json  vite.config.ts
client/src/: App.tsx  api.ts  styles.css
client/src/components/: ChatTab.tsx  GitPanel.tsx  Login.tsx  MemoryTab.tsx  MissionControlTab.tsx  PipelineTab.tsx  ProjectPill.tsx  SettingsTab.tsx  Sidebar.tsx  StudioTab.tsx  TerminalTab.tsx  TuningTab.tsx  WorkspaceTab.tsx
mcp/: obsidian.mcp.json
server/: package.json
server/src/: config.ts  index.ts  terminal.ts
server/src/db/: index.ts  seed.ts
server/src/services/: agentic.ts  agents.ts  context.ts  fcc.ts  git.ts  hermes.ts  memory.ts  orchestrator.ts  pipeline.ts  runner.ts  studio.ts  templates.ts  tool-registry.ts  workspace.ts
templates/erra-amp-sim/: Cargo.toml  README.md
templates/erra-amp-sim/src/: lib.rs
